--- a/css/main.css
+++ b/css/main.css
@@ -14,13 +14,17 @@ body {
 	font-size: 1em;
 }
 
+img {
+	max-width: 100%; 
+}
+
 .container{
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-flow: row wrap;
 	max-width: 1200px;
-	margin: 0 auto;
+	width: 90%; 
 }
 
 h1,
@@ -49,28 +53,28 @@ p {
     padding: 0 30px;
 }
 
-/*The widths are in a percentage!*/
 header {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	flex-flow: column wrap;   /*mobil set to column*/
+	flex-flow: column wrap;  
 	width: 100%;
-	margin: 0 auto;
 }
 
 header h1 {
 	border-bottom: 3px solid #77a466;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	padding: 38px 0 20px 0;
 	margin: 0;
-	width: 90%;
+	text-align: center; 
+	width: 100%; 
 }
 
 header h1 span {
 	color: #77a466;
+}
+
+header nav {
+	width: 100%; 
 }
 
 header nav ul {
@@ -80,15 +84,16 @@ header nav ul {
 
 header nav ul li {
 	text-transform: uppercase;
+	text-align: center; 
 	font-weight: 700;
 	font-size: .875em;
-	list-style: none; 
+	list-style: none;
 	padding: 15px 10px; 
 }
 
 header nav ul li a{
 	color:#77a466;
-	text-decoration: none;
+	text-decoration: none; 
 }
 
 .top-section,
@@ -99,42 +104,28 @@ header nav ul li a{
 	flex-flow: column wrap;
 }
 
-.main-image {  /*4th layer container for <img> tag */
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 100%;
-}
-
 .main-image img {
 	border-top: 3px solid #77a466;
 	border-bottom: 3px solid #77a466;
-	width: 90%;
-}
-
-.main-title {
-	width: 90%;
 }
 
 .main-title h2 {
 	text-align: left;
 	padding: 5px 0;
 	color: #77a466;
-	width: 100%;
 }
 
 .main-title p {
 	padding: 0;
 	font-size: 1em;
 	line-height: 25px;
-	width: 100%;
 }
 
 .section-one,
 .section-two,
 .section-three {
 	border-top: 1px solid #eee;
-	width: 90%;
+	width: 100%; 
 }
 
 .section-one h3 {
@@ -183,7 +174,7 @@ footer {
 	flex-flow: row wrap;
 	margin: 0 auto;
 	text-align: center;
-	width: 90%;
+	width: 100%; 
 }
 
 footer span {
@@ -198,7 +189,7 @@ footer span {
 /******************************************************/
 /*******************  TABLET  *************************/
 /******************************************************/
-@media print {    
+@media print {   
 	body {
 		background: none;
 	}
@@ -209,15 +200,12 @@ footer span {
 
 @media (min-width: 768px){
 	.bottom-section {
-		display: flex;
-		justify-content: center;
-		align-items: flex-start;  /* raises all to the top of y axis */
+		align-items: flex-start; 
 		flex-flow: row wrap; 
-		width: 90%;
 	}
 	.bottom-section h3,
 	.bottom-section p {
-		padding-left: 15px;
+		padding: 0 15px;
 	}
 	.section-one ul {
 		padding-left: 15px;
@@ -227,7 +215,7 @@ footer span {
 	.section-three {
 		border: 1px solid #eee;
 		border-bottom: none;
-		min-height: 200px; /*set this so all three divs were the same height*/
+		min-height: 220px; 
 		width: 33%; 
 	}
 	.main-image img {
@@ -243,20 +231,17 @@ footer span {
 /******************************************************/
 @media (min-width: 1200px){
 	header {
-		flex-flow: row nowrap; /*mobil set to column*/
-		width: 90%;
+		flex-flow: row nowrap;
 	}
 	header h1 {
 		border-bottom: none;
-		justify-content: flex-start;
-		width: 100%;
+		text-align: left;
 	}
 	header ul  {
 		display: flex;
-		justify-content: flex-start;
+		justify-content: flex-end;
 		align-items: flex-end;
 		flex-flow: row nowrap; 
-		width: 100%;
 	}
 	header nav ul li {
 		padding-top: 40px;
